--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -119,7 +119,7 @@ Left?!=4
                 H：人 
                 L：人看不见的空间生命体
                 P:附体提到哪些人
-            Index.Triangle:
+            Index.Triangle://毛泽东 光朝拜 人体穿入 滚动
                    H
                   /   \
                 L       P
@@ -140,13 +140,15 @@ Left 2-O-5?!= 30 Date:1/10
 
     函数：气层内外.形态体
         索来德 ：软 维赛德：硬  
-        美为本 人为准 美为本 水为准 //Baeutify  Butterfly
-        
-        兀^术菱Lz之 Lack.hard
-        牛群 Lacof:Soft.ButRabbered
-        荆轲 L?.LightOut
-        Geo Lacof:Delicacy
-        日//Trashuman
+        美为本 人为准 美为本 水为准 美为准 //Renlay Baeutify  Waterize Waterie Whaterly Butterfly
+        为：本 准 水 美 人 妲七层：内|外
+        形态体：
+            兀^术菱Lz之 Lack.hard
+            牛群 Lacof:Soft.ButRabbered
+            荆轲 L?.LightOut
+            Geo Lacof:Delicacy
+        半形态体：
+            日//Transhuman
     追溯.理序
 
     
