热 速度 动力 一张专利聚会

--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -70,12 +70,12 @@ Rhea CKronor
         生命体文明历史最早演化 
         Dino：恐龙
         Group：群 氏 族 部落 酋  奴 主 隶 封 建 //社会
-        Kause:be dic cause
+        Kross.Kause:be dic cause Clothes
             女: 义~ 同性~单性~双性:男 
             -----------------------
-                美M beauty
+                  waterly  remarkable  beauty
             -----------------------
-            钱.物 权 地盘 宗教
+            钱.物 权.名声 地盘 宗教影响干预
             阿尔弗莱德： 气 仇 isolated 交易
         
         Group：氏：交易：口角
