--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -173,8 +173,9 @@ Left 2-O-5?!= 30 Date:1/10 ?HandMovement-Terminating
         是否涉及到宗教 // Kross.transcolor.html
 
     回溯
-
-    君主立宪制 专利 莱特兄弟 拉丁 pedant petant tent
+    
+    君主立宪制 专利 莱特兄弟 Latin.pedant petant tent
+        热 速度 动力 一张专利聚会
 </pre>
 </body>
 </html>
