--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -176,6 +176,38 @@ Left 2-O-5?!= 30 Date:1/10 ?HandMovement-Terminating
     
     君主立宪制 专利 莱特兄弟 Latin.pedant petant tent
         热 速度 动力 一张专利聚会
+Left 2  23：08 SleepNot 
+        东婻血 四串 皋烷  
+        克中妓
+            烟祸寺驷柒  流十@怂高宗 灰 鬃 马镫元 党项~上 北京城      
+            丁丁狸仙妓 瀑瀑方方兀兀3.14 /~AME?->Prostitue<-?WetBrick.Barzial AWP Square Line:53s / 
+            索引亚特兰蒂斯 地下求救
+        漫画 亚 子丁 丁 特方 地四/^temple hidden/ 地下奔放射性光的文明 出 自由
+        辐射小子 
+
+    罗列
+        关键点：Together Water we get, then SHARE use them to the MAXIUM
+        
+        细胞分列与融合 
+            优先等级 首屈一指：所有疼（球内？~外）元素全部推走并且加以利用 （球外？~内）反向经验回来 共享 最大限度利用
+                索引开始：地球反季节适应 调控
+                不喝水 不呼吸 不睡觉 贴在地表不用重力需求力 可以不用太阳光 
+            软 硬 
+        向心力移动 
+            洛克梅根 脑控人类 办事 三角形坚固 但是 人心不稳定赵阳完蛋 /^Leon.Differ->Human~/
+            莱昂尼克.角落 挑刺 Undiggable
+        传送技术 /~Transact~/
+            不一样了 莱昂尼克似的 绝对自由穿行 Leonick.Solid.Rabbered(Wrappered).Transport
+            失联 
+                不疼但是散了 细胞或粒子融合 
+                疼传到了愚蠢    
+        伊莱克斯 /~Standout.LeonQuota~/
+            颜色？淡化平淡无奇(最底层？） 到奇趣 平坦 
+            无生命体不孤独
+            维金/~Declare.Wjcking~/
+        罗塞塔:经验,端口.其他
+    理序
+
 </pre>
 </body>
 </html>
