--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -191,18 +191,24 @@ Left 2  23：08 SleepNot
         细胞分列与融合 
             优先等级 首屈一指：所有疼（球内？~外）元素全部推走并且加以利用 （球外？~内）反向经验回来 共享 最大限度利用
                 索引开始：地球反季节适应 调控
-                不喝水 不呼吸 不睡觉 贴在地表不用重力需求力 可以不用太阳光 
+                
+                用：需或不：喝水 呼吸 睡觉 表面上是贴在地表 重力 需求力 太阳光 
+                极端 解决与利用：
+                    岩浆 绝对0度 
+                    穿越 铁 水泥 人类使用工具 电子 关键词.立即复原一模一样 不打忘
             软 硬 
-        向心力移动 
-            洛克梅根 脑控人类 办事 三角形坚固 但是 人心不稳定赵阳完蛋 /^Leon.Differ->Human~/
+        向心力移动
+            多个声明 生命体
+            洛克梅根 启示，脑控，合作人类 共同办事
+            三角形坚固 但是 人心不稳定赵阳完蛋 形态不知元素可能忽略或其他/^Leon.Differ->Human~/            
             莱昂尼克.角落 挑刺 Undiggable
         传送技术 /~Transact~/
-            不一样了 莱昂尼克似的 绝对自由穿行 Leonick.Solid.Rabbered(Wrappered).Transport
+            不一样了 莱昂尼克似的 绝对自由穿行 Leonick.Solid.Rabbered(Wrappered).RoundChecking-Transport
             失联 
                 不疼但是散了 细胞或粒子融合 
                 疼传到了愚蠢    
         伊莱克斯 /~Standout.LeonQuota~/
-            颜色？淡化平淡无奇(最底层？） 到奇趣 平坦 
+            颜色？解决平淡无奇(最底层？） 到奇趣 平坦 
             无生命体不孤独
             维金/~Declare.Wjcking~/
         罗塞塔:经验,端口.其他
