--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -50,7 +50,8 @@
     梦~仙维?->铀力器?=2次:煺 踹 磴 舞力器 条燥 Flea 
     Finger 分割 掌管聋附芹  辛浆 5脍牵
 
-    成就感：三角族 把西方(色 文明三 Aztec.Maya.Inka 族球旗：磁欧石倾倒) 希腊圆 
+    成就感：三角族 巴西方 希腊圆   转置
+            色 文明三 Aztec.Maya.Inka 族球旗：磁欧石倾倒   
     埃及阴包
      包?例子:金砖
     女娲族
@@ -63,9 +64,7 @@ Left5: 1/8
         牢狼回超
         狼西安萍
     Lonic.Traceback
-
-
-
+        
     关键:Jz1euz/hos-pity^cou-liqour-Transparency^CoCao++  
     drink.color:grape wisky tequilla wine
         habits:usual drink
@@ -142,7 +141,9 @@ Left 2-O-5?!= 30 Date:1/10 ?HandMovement-Terminating
 
     函数：气层内外.形态体
         索来德 ：软 维赛德：硬  
-        美为本 人为准 美为本 水为准 美为准 //Renlay Baeutify  Waterize Waterilize WaterBlance WaterLever Waterie Whaterly Butterfly
+        美为本 人为准 美为本 水为准 美为准 
+        Renlay Baeutify  Waterize Waterilize WaterBlance WaterLever Waterie Whaterly Butterfly
+        Rwb
         为：本 准 水 美 人 妲七层：内|外
         形态体：
             兀^术菱Lz之 Lack.hard
@@ -175,15 +176,15 @@ Left 2-O-5?!= 30 Date:1/10 ?HandMovement-Terminating
     回溯
     
     君主立宪制 专利 莱特兄弟 Latin.pedant petant tent
-        热 速度 动力 一张专利聚会
+    一张专利聚会：热 速度 动力 
+
 Left 2  23：08 SleepNot 
         东婻血 四串 皋烷  
         克中妓
             烟祸寺驷柒  流十@怂高宗 灰 鬃 马镫元 党项~上 北京城      
-            丁丁狸仙妓 瀑瀑方方兀兀3.14 /~AME?->Prostitue<-?WetBrick.Barzial AWP Square Line:53s / 
-            索引亚特兰蒂斯 地下求救
+            索引：丁丁狸仙妓 瀑瀑方方兀兀3.14 /~AME?->Prostitue<-?WetBrick.Barzial AWP Square Line:53s / 亚特兰蒂斯 地下求救           
         漫画 亚 子丁 丁 特方 地四/^temple hidden/ 地下奔放射性光的文明 出 自由
-        辐射小子 
+        辐射小子
 
     罗列
         关键点：Together Water we get, then SHARE use them to the MAXIUM
@@ -202,7 +203,7 @@ Left 2  23：08 SleepNot
             洛克梅根 启示，脑控，合作人类 共同办事
             三角形坚固 但是 人心不稳定赵阳完蛋 形态不知元素可能忽略或其他/^Leon.Differ->Human~/            
             莱昂尼克.角落 挑刺 Undiggable
-        传送技术 /~Transact~/
+        传送到达节点 /~Transact~/
             不一样了 莱昂尼克似的 绝对自由穿行 Leonick.Solid.Rabbered(Wrappered).RoundChecking-Transport
             失联 
                 不疼但是散了 细胞或粒子融合 
@@ -211,6 +212,7 @@ Left 2  23：08 SleepNot
             颜色？解决平淡无奇(最底层？） 到奇趣 平坦 
             无生命体不孤独
             维金/~Declare.Wjcking~/
+
         罗塞塔:经验,端口.其他
     理序
 
