--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -183,6 +183,7 @@ Rapid.Index.Rotate.InsideBody.Called:Human!?=Anihuman
     干净 知道怎么回事
     界限是 忍过 直道 anemo
     蛇精狠毒 直射镜 反射镜 但是极端干净 概念不同
+狐狸附体跳舞 保家仙 土但是 跳什么舞
   </pre>
 
     </div>
