--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -193,7 +193,7 @@ Left 2  23：08 SleepNot
             优先等级 首屈一指：所有疼（球内？~外）元素全部推走并且加以利用 （球外？~内）反向经验回来 共享 最大限度利用
                 索引开始：地球反季节适应 调控
                 
-                用：需或不：喝水 呼吸 睡觉 表面上是贴在地表 重力 需求力 太阳光 
+                用，需要，不：喝水 呼吸 睡觉 表面上是贴在地表 重力 需求力 太阳光 
                 极端 解决与利用：
                     岩浆 绝对0度 
                     穿越 铁 水泥 人类使用工具 电子 关键词.立即复原一模一样 不打忘
@@ -202,12 +202,12 @@ Left 2  23：08 SleepNot
         *向心力移动
             多个声明 生命体
             洛克梅根 启示，脑控，合作人类 共同办事
-            三角形坚固 但是 人心不稳定赵阳完蛋 形态不知元素可能忽略或其他/^Leon.Differ->Human~/            
+            三角形坚固 但是 人心不稳定赵阳完蛋 形态不知元素可能忽略或其他/^Leon.Different->Human~/            
             莱昂尼克.角落 挑刺 Undiggable
 
         *传送到达节点 /~Transact~/
             不一样了 莱昂尼克似的 绝对自由穿行 Leonick.Solid.Rabbered(Wrappered).RoundChecking-Transport
-            失联 
+            失联 传输
                 不疼但是散了 细胞或粒子融合 
                 疼传到了愚蠢    
 
@@ -222,15 +222,31 @@ Left 2  23：08 SleepNot
                 量 微粒子 /~Line:196s
     罗列:罗塞塔:经验,端口.其他
     
-    维金变形记 F1
+    维金 F1
+        地球史前文明消失和外界星球联系与复苏：
+            维金变形记
+            老掌沟奇遇记
+            超自然生命体现象引导解释-定位到高等文明所在区域 // Persvision
+                海平面浮出消失的大陆
+                地外星球关联
+            丁丁历险记 地心 
+             维塞尔 纪元文明//=Line:185s
+                 Ever-Vengent
+                 Discover and locate  the lost Land
+                 Guide people that the lost civilization had already reappeared and located somewhere
+        消失：地底文明 浮出水面  传送技术 地外 
+            亚特兰蒂斯 利姆利亚 苏美尔
+            磁欧石 爱磁欧 水晶 七彩珠 
+        复苏
+
        舅救
             大 搭救
-            二 九
-            三 伞酒
+            二 九个星球
+            三 伞酒 重力
             四 思旧迎春
             五 赎回
         鲁迅 手拿烟 砖树 串宋 妓树 激励方狗跳 地下不行了 顶 楼
-    回溯.中学
+    回溯
 </pre>
 </body>
 </html>
