--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -184,6 +184,7 @@ Rapid.Index.Rotate.InsideBody.Called:Human!?=Anihuman
     界限是 忍过 直道 anemo
     蛇精狠毒 直射镜 反射镜 但是极端干净 概念不同
 狐狸附体跳舞 保家仙 土但是 跳什么舞
+地球空间机械性循环:问
   </pre>
 
     </div>
