hard not 不 config

--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -92,7 +92,7 @@ Left?!=4
         函数.人类创造范围：必备 基本 生活 工作 娱乐 防备抵御 //Not standout
             人造人：
                 .女铝口人内娲 彩欧时 三晶角体结界 传送 端口?≈江山形成
-                知道 ！= 死亡 
+                知道 ！= 死亡 眼睛 传送 应该是最动态的部位 却最软弱
                 孤独 ？：分裂-商人-传送
                 索引：蔡培 蔡伦 Line:99x 西方同性恋
             人造物：
@@ -187,7 +187,7 @@ Left 2  23：08 SleepNot
         辐射小子
 
     理序.概括总览
-        关键点：Together Water we get, then SHARE use them to the MAXIUM
+        关键点：Together Water we get, then SHARE(Shisaer Saixyer) use them to the MAXIUM
         
         *细胞分列与融合 
             优先等级 首屈一指：所有疼（球内？~外）元素全部推走并且加以利用 （球外？~内）反向经验回来 共享 最大限度利用
