--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -184,6 +184,8 @@ Rapid.Index.Rotate.InsideBody.Called:Human!?=Anihuman
     界限是 忍过 直道 anemo
     蛇精狠毒 直射镜 反射镜 但是极端干净 概念不同
 狐狸附体跳舞 保家仙 土但是 跳什么舞
+宗教 地理位置 无知与潜移默化影响
+    尤其是不信教的 中国知道佛教 但是西方挤勒 渗透基因
   </pre>
 
     </div>
