fusion sweet auto-filter-loneback

--- a/AngelNetwork/analytical/index.html
+++ b/AngelNetwork/analytical/index.html
@@ -265,6 +265,24 @@ Sumit.Lonic
         Axis.angle
         Axis.center.inside&outside:border&kolor
 End
+
+Coivd:Computer Laptop Celly    
+    control
+    input
+       storage.read.hardisk|memory
+       write.hardisk|memory    
+    output
+    voice.speaker
+    speak.micorphone
+    display.screen
+
+    Renliy.Human.Rockmega:Found.Difference
+    hand
+    eye.brain.ear
+    oral verbal
+
+Aisock
+    Flat.DisplayScreen.3d.Gaps.Analytical.Metric.Meticals
 </pre>
     <script type="text/javascript">
         var p = $("#editor").html();
