--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -212,7 +212,7 @@ Left 2  23：08 SleepNot
                 不疼但是散了 细胞或粒子融合 
                 疼传到了愚蠢    
 
-        *伊莱克斯 /~Standout.LeonQuota~/
+        *艾塞克斯 伊莱克斯 /~Standout.LeonQuota~/
             人类角度：一眨眼功夫 300年过去 微粒子罗塞塔
             颜色？解决平淡无奇(最底层？） 到奇趣 平坦 
             概念：无生命体不孤独 动态城池/^Not Standout Style/            
@@ -262,6 +262,17 @@ Left Recthand-WaveAntiPillar
     宗教启示 维金美塞卡斯特/~Don't Stereotype Hidden when required, Teabag-LearnSense.Acquire?like.Rosstta
     从古至今 群体事件  孤独牵连 底盘理由责任推搡  //TribeGroup.Stain?=Detain
     *?肝素省 狮子王 婬敌安 丛林脍泡 TriangleGroup.Sexhidden.Plain-Forest
+
+    Advent:Andev.Easy.Develop.ArchitectInformation.Collect
+        Cxp/Jav
+        Layer:Isoc Isoxk
+        Merge:Isometric
+    Anyuser:Aniuser.VisionControl.Feeling
+        Dix Gdi Svg Cvs 
+        MultipleVisionDisplayResearch
+        Business.FormKontrol
+        *Turkangle //1O1ONE 
+    关键.消损型.点球-骨-此欧式.渴了喝
 </pre>
 </body>
 </html>
