--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -263,6 +263,16 @@ Left Recthand-WaveAntiPillar
     从古至今 群体事件  孤独牵连 底盘理由责任推搡  //TribeGroup.Stain?=Detain
     *?肝素省 狮子王 婬敌安 丛林脍泡 TriangleGroup.Sexhidden.Plain-Forest
 
+    维吾尔与突桀.华夏?>妓克中 //Transturk.Requirement.Remove|Hide.LetterCode Transtruct 
+        连
+        竖上挑
+        圈爱滋飘带
+        钓
+        点 菱形 凯特尔 //感情色彩
+        缀 蛇形 开:近视维铠//Gold Dimand Special 
+        分离
+    回溯.回逆.转置
+
     Advent:Andev.Easy.Develop.ArchitectInformation.Collect
         Cxp/Jav
         Layer:Isoc Isoxk
