--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -272,17 +272,24 @@ Left Recthand-WaveAntiPillar
         缀 蛇形 开:近视维铠//Gold Dimand Special 
         分离
     回溯.回逆.转置
-
-    Advent:Andev.Easy.Develop.ArchitectInformation.Collect
-        Cxp/Jav
-        Layer:Isoc Isoxk
-        Merge:Isometric
-    Anyuser:Aniuser.VisionControl.Feeling
-        Dix Gdi Svg Cvs 
-        MultipleVisionDisplayResearch
-        Business.FormKontrol
-        *Turkangle //1O1ONE 
     关键.消损型.点球-骨-此欧式.渴了喝
+
+    Func.Soft.Hard
+        Andvent:Andev.Easy.Develop.ArchitectInformation.Collect
+            Cxp/Jav
+            Layer:Isoc Isoxk
+            Merge:Isometric
+        Anyuser:Aniuser.VisionControl.Feeling
+            Dix Gdi Gui Svg Cvs 
+            MultipleVisionDisplayResearch
+            Business.FormKontrol
+            *Turkangle //1O1ONE 
+    End.AnalyticalBack
+
+    克中妓：
+        巴西方 耶稣山 气铅  富对面穷 地理 南半球 三角酷 挤雨//nv
+        鱼渴 疾病 黑死 铀胎忍 牢鼠 洒蛮
+        刚体穿刺 美 与 告密 一句话世界一炸
 </pre>
 </body>
 </html>
