--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -112,7 +112,7 @@ Left?!=4
      追溯..分析.关键词：限制创造性 //Lonic.Traceback.Standout
 
     解释：索引-牵连 \\RenliyIndex-LeonIndex-RockmegaIndex   
-        关键词：*人类.忽略  
+        关键词：*人类.忽略 相关 关联
             1 人们只知道毛泽东北京”光明“ 却不知道 背后那些相关的人 以及反对的人 一旦涉及到
             2 相关：事件 时间 地点 人物 
             3 名声以外
@@ -151,6 +151,7 @@ Left 2-O-5?!= 30 Date:1/10 ?HandMovement-Terminating
             牛群 Lacof:Soft.ButRabbered
             荆轲 L?.LightOut
             Geo Lacof:Delicacy
+            陆毅 路易 田
         半形态体：
             日//Transhuman
     追溯.理序
@@ -283,6 +284,7 @@ Left Recthand-WaveAntiPillar
             Dix Gdi Gui Svg Cvs 
             MultipleVisionDisplayResearch
             Business.FormKontrol
+            Windows.Desktop.Requires.SolidShape.Anothers
             *Turkangle //1O1ONE 
     End.AnalyticalBack
 
@@ -290,6 +292,12 @@ Left Recthand-WaveAntiPillar
         巴西方 耶稣山 气铅  富对面穷 地理 南半球 三角酷 挤雨//nv
         鱼渴 疾病 黑死 铀胎忍 牢鼠 洒蛮
         刚体穿刺 美 与 告密 一句话世界一炸
+        电工： 杨修 丝绸(川）厨子 颜色 成就嫉妒 感洞 被迫端口
+        水 飞鸡 包 心酸感氯气 灌不进去 水 盅冬鑫酱
+    Joint&Knocle(Jkc):Prison Break Robbery 
+        The master keep laugh at the whole world
+        The store robbery cnote with the robber
+        cliff fallen off?.winter left head/hand wound
 </pre>
 </body>
 </html>
