--- a/AngelNetwork/analytical/index.html
+++ b/AngelNetwork/analytical/index.html
@@ -266,7 +266,9 @@ Sumit.Lonic
         Axis.center.inside&outside:border&kolor
 End
 
-Coivd:Computer Laptop Celly    
+Covid:Computer Laptop Celly    
+    communicate:socket wifi
+    interface.mainboard
     control
     input
        storage.read.hardisk|memory
