--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -154,6 +154,7 @@ Left 2-O-5?!= 30 Date:1/10 ?HandMovement-Terminating
             陆毅 路易 田
         半形态体：
             日//Transhuman
+            O within Z Train Trim 赵劫
     追溯.理序
 
     关键.小笋星.通信点-球
