--- a/Rastera/asnic/rastera/rast.html
+++ b/Rastera/asnic/rastera/rast.html
@@ -36,8 +36,8 @@
 	bottom low middle high 困分化 晚吃一次 工面1
     bottom low middle high 困分化  工面3
     bottom low middle high  buginsect inner-danG^er 
-     bottom low middle high
-     bottom low middle high
+     bottom low middle high work group
+     bottom low middle high head&hand off bone Sos
 开始Rast
 
 Napoléon Bonaparte 贵格派 Quicker Quicker
