--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -238,7 +238,7 @@ Left 2  23：08 SleepNot
                  Discover and locate  the lost Land
                  Guide people that the lost civilization had already reappeared and located somewhere
         消失：地底文明 浮出水面  传送技术 地外 
-            亚特兰蒂斯 利姆利亚 苏美尔
+            亚特兰蒂斯 利姆利亚 根达亚 苏美尔
             磁欧石 爱磁欧 水晶 七彩珠 
         复苏
 
@@ -295,13 +295,16 @@ Left Recthand-WaveAntiPillar
         刚体穿刺 美 与 告密 一句话世界一炸
         电工： 杨修 丝绸(川）厨子 颜色 成就嫉妒 感洞 被迫端口
         水 飞鸡 包 心酸感氯气 灌不进去 水 盅冬鑫酱
+
     Joint&Knocle(Jkc):Prison Break Robbery 
         The master keep laugh at the whole world
         The store robbery cnote with the robber
         cliff fallen off?.winter left head/hand wound
-Node->OFF 15-1/14
-Noun:Line PineJeton|Jetup Bine Aounb
-Verb:Rowlet Column Getoub Dowen
+Hand&Head:Nod->Off 15-1/14
+    Noun:Line PineJeton|Jetup Bine Aounb
+    Verb:Rowlet Column Getoub Dowen
+
+    鹅卵石/@Stone/防块 幂汞 电基厂 KLH 钨金钝
 </pre>
 </body>
 </html>
