--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -92,6 +92,8 @@ Telephoniz
 Panic&Threat
     ContrictSoundies 第一次刷棋 Underball-Neverforget 
     DIgdug panic rate threat
+柯纳米方式/^Konami /
+    俄罗斯方块 关口 
     </pre>
 </body>
 </html>
