--- a/AngelNetwork/index.html
+++ b/AngelNetwork/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
  <!--   <script src="../content/require.min.js" data-main="../controllers/app.js"></script>-->
-
-<textarea id="TextArea1" cols="210" rows="200" style="font-size:14px; font-family:Verdana;">
+    </head>
+<body><span style="background-color:yellow; position:relative; left:10px; top:20px;opacity:0.6; width:50px; height:20px;z-index:1;"></span>
+<textarea id="TextArea1" cols="180" rows="50" style="font-size:16px; border:0px; background-color:beige;z-index:0; font-family:Verdana;">
 维金 F1
     地球史前文明消失和外界星球联系与复苏：
         维金变形记
@@ -32,10 +33,10 @@
         四 思旧迎春
         五 赎回
     鲁迅 手拿烟 砖树 串宋 妓树 激励方狗跳 地下不行了 顶 楼
-回溯R1-Color.Blue
+回溯R1-Color.Blue 
 </textarea>
-    <span style="background-color:yellow; position:absolute; left:10px; top:20px;opacity:0.6; width:50px; height:20px;"></span>
-</head>
-<body>
+   
+    
+
 </body>
 </html>
