--- a/AngelNetwork/analytical/asnic/leostart.html
+++ b/AngelNetwork/analytical/asnic/leostart.html
@@ -44,7 +44,7 @@ Flat.Earth.Solid
     //固 顶 立
     //Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
     //Defintion.Axis.SideFirst:三个边完全相等 = Earth 60 degree
-var Solid = ["Circle", "Trianet", "Rectan"] //Radical
+var Solid = ["Circle", "Triant", "Rectan"] //Radical Fonc~Square 正方形
 var Angleout = Triangle Rectangle Iregular Regular 
         Circulet Sequallet Sequalled
  var Around= Triangular Rectangular
