--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -300,7 +300,8 @@ Left Recthand-WaveAntiPillar
         The master keep laugh at the whole world
         The store robbery cnote with the robber
         cliff fallen off?.winter left head/hand wound
-Hand&Head:Nod->Off 15-1/14
+Nod->Off 15-1/14
+    Hand&Head
     Noun:Line PineJeton|Jetup Bine Aounb
     Verb:Rowlet Column Getoub Dowen
 
