--- a/Rastera/asnic/rastera/interface.html
+++ b/Rastera/asnic/rastera/interface.html
@@ -7,8 +7,8 @@
 <body>
 <pre>
 
-分析性质.共识 草书 突厥 风语
-用于分析 手写正规体 好看但是不快
+草书写体分析性质.共识 草书 突厥 风语
+    用于分析 手写正规体 好看但是不快
 
 突桀鱼：//workgroup.html line:198s
     猛骨语 树 //vertical
@@ -16,6 +16,50 @@
     惟我耳
     寓言散但刃心齐 血得脍 胆直.条兀肠格 坐买卖 /~Sing&Dancing&Sell^/ 
     勺几何建设星
+细胞与涵数
+    彩虹颜色 7个角 Anti-Angle-Out.FlatFirst.RainbowImpressed
+        Keyword:Matter.Utilize
+            Transtick|Merge|Interface|Intercross
+            Renliy.EyeVison.SeeingSide.Leato.Leon?.VisionalEntire&Whole
+            VisionOffset
+        Flat.Isodec:
+            EnglishCulture.Isometric.Dimentionally^
+            Earth.TransactWrong:Roune.Isometric:Matical
+        Flat.Isonic:
+            Paper,PenUtilize.Dotline
+            ComputerScreen.PixcelDotConnect
+    语言.汉语立体分类：//其他语言罗列
+         拼音结合：
+            三角 Jiao Jov
+            方正 Zhen Fang
+            圆 Yuan Ruan
+    理昂:?莱昂尼克
+        Func.TiledAtlas.Cell.Form.Func.Think
+            Flat.Isodec.ComputerScreen.TileAtlas
+            Tiled.Orthogonal
+                正方形 长方形 
+            Tiled.Isometric.Rotated 
+                菱形 
+            Tiled.Hexagonal.Rotated
+                六角形 蜂窝 光斑
+            TiledAtlas.Leato:
+                Renliy.EyeVision   
+                    Axis.AngleFirst.Degree45
+                        Earth.Dimention.Defintion:2.5d
+                    Axis.SideDegree45Hexagon                
+            Summarized.Keyword:
+                Viewpoint,Building,Area            
+        End   
+    融合与分列
+        △ ○  □
+        关键词：
+            名词：Size
+            动词：Attach Detached Stick ColoRing
+                 SimiliarWith Closito 
+            形容：Roune TransactWrong LineBine
+        行列：
+            Cosset
+回溯循环.莱昂尼克
 </pre>
 </body>
 </html>
