--- a/Rastera/asnic/rastera/interface.html
+++ b/Rastera/asnic/rastera/interface.html
@@ -51,11 +51,12 @@
                 Viewpoint,Building,Area            
         End   
     融合与分列
-        △ ○  □
+        △ ○ □
         关键词：
             名词：Size
             动词：Attach Detached Stick ColoRing
-                 SimiliarWith Closito 
+                  SimiliarWith Closito 
+                  Max.Size.Rate
             形容：Roune TransactWrong LineBine
         行列：
             Cosset
