--- a/AngelNetwork/analytical/asnic/leon-start.html
+++ b/AngelNetwork/analytical/asnic/leon-start.html
@@ -28,29 +28,62 @@
        Count
     Abs~o~lute 
 Intelligent = ["Human","Rockmega","Leon"]; abs~cfs abs~mfs   
-OrginedWaterly:Recognition~Mei~Beautiful:Required| Rand-Options |Not:不利
+OrginedWaterly:Recognition~Mei~Beautiful:Required|Not| Rand-Options :不利
         动词  = ["IsEquals","Belong", "Relate", ];//"Close"
         名词 形容词 =  Limit Range Bound Span
-var Leon = ["Source", "Orgin"]; //Source = Substance
-var Maticals = ["Flat", "Tricycle","Metric"];//Metric立体
+var Leon = ["Source", "Orgin"]; //Source=(Substance)
+var Maticals = ["Flat", "Tricycle","Metric"];//空间平面立体总分类叫法
 
 Flat.EarthVisionSolid:Axis.Anaytical.Dot.Line.Angles&ReferedObjects
 Isoic Isaac Iassic
+Isodec
+     Rect
 Trikon
-Rect
-Flat.Earth.Solid
+Definite:TRC~CTR~RCT^Kaiter
+//固 顶 立
+//Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
+//Defintion.Axis.SideFirst:三个边完全相等 = Earth 60 degree
+       
+Solid = ["Triant", "Frant"] //Radical Fonc~Square 正方形Rectan
+Circle Renliy.Sequal
+Leon.Source
+    CircleOpen
+        Ionic:With single color(triant tricyle) once stand out 
+        Source.BeinAsked.Via.IntelligentCell.Leadito        
+        Leon(Rectan.Circle.Fracten)Renliy
+        Renliy(Fracten.Circle.Rectan)Leon
+        Hard(Flex^I^able)Soft
+        // Isoc
+        //Isonic 
+        //Isodec ?=(Frant Fectan)
+    CircleClose
+    Anaylized(Balance,Parellel) Keyword:hard,soft,fast,slow is wrappered with cell
+        Ion//电出头 三角/^Tricon/在电脑描绘的像素方里面穿空间进入人身体速度快 闪电 激光
+        Ionic:.Sequal //Ionic-color
+        Ionik//Transitioning marking,renliy.period
+        Ionick->:Ciqual //Ionick.k^olo~r
+        Ionike->Ceiqual //Ionike-Color|Kolor
 
- Definite:TRC~CTR~RCT^Kaiter
-    //固 顶 立
-    //Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
-    //Defintion.Axis.SideFirst:三个边完全相等 = Earth 60 degree
-var Solid = ["Circle", "Triant", "Rectan"] //Radical Fonc~Square 正方形
-var Angleout = Triangle Rectangle Iregular Regular 
-        Circulet Sequallet Sequalled
- var Around= Triangular Rectangular
-var Route = ["Dot", "Line", "Area"]; //3A sequalet 回list        Geometric 
-var Axis = "Center","Side", "Angle" 
-         Caisde saide kaide 立体面角 
+        fos
+            ae: Aao emit //A\a
+            rc: Ren.vesaid.down Cal.vesaid.stick&quota
+        
+            ck: sign ket
+                defined kolored
+        eof
+    End
+    Leonic:Inside-Out Fracten + Fracten
+        Rectan
+        Beauty as a benchmark
+Leon.BianeAsked
+
+
+Angleout = Triangle Rectangle Iregular Regular 
+Circulet Sequallet Sequalled
+Around= Triangular Rectangular
+Route = ["Dot", "Line", "Area"]; //3A sequalet 回list        Geometric 
+Axis = "Center","Side", "Angle" 
+    Caisde saide kaide 立体面角 
 
     CaideKorner //RoundTriangle
 
