--- a/Rastera/asnic/rastera/interface.html
+++ b/Rastera/asnic/rastera/interface.html
@@ -19,7 +19,7 @@
 细胞与涵数
     彩虹颜色 7个角 Anti-Angle-Out.FlatFirst.RainbowImpressed
         Keyword:Matter.Utilize
-            Transtick|Merge|Interface|Intercross
+            Transtick|Interface|Merge Intercross
             Renliy.EyeVison.SeeingSide.Leato.Leon?.VisionalEntire&Whole
             VisionOffset
         Flat.Isodec:
@@ -36,13 +36,13 @@
     理昂:?莱昂尼克
         Func.TiledAtlas.Cell.Form.Func.Think
             Flat.Isodec.ComputerScreen.TileAtlas
-            Tiled.Orthogonal
+            Tile.Orthogonal
                 正方形 长方形 
-            Tiled.Isometric.Rotated 
+            Tile.Isometric.Rotated 
                 菱形 
-            Tiled.Hexagonal.Rotated
+            Tile.Hexagonal.Rotated
                 六角形 蜂窝 光斑
-            TiledAtlas.Leato:
+            TileAtlas.Leato:
                 Renliy.EyeVision   
                     Axis.AngleFirst.Degree45
                         Earth.Dimention.Defintion:2.5d
@@ -61,6 +61,9 @@
         行列：
             Cosset
 回溯循环.莱昂尼克
+
+地球起源 骨木源
+米共粥 十头完姐偏 //Geo.Rotate.Wjcking
 </pre>
 </body>
 </html>
