--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -22,6 +22,22 @@
             Transtick|Interface|Merge Intercross
             Renliy.EyeVison.SeeingSide.Leato.Leon?.VisionalEntire&Whole
             VisionOffset
+        Metric Geo metry;
+        Flat.Isoc
+            Fact//Apsodia.Franket
+            Renliy.EyeVision
+                Rect    
+                ComputerScreen&Paper Rect 
+            莱昂.起源
+                人站在智能在外面观测 因为是平面地 洛克梅根可以穿，但是水泥
+
+                正回 方 分析 但是很少见
+                长回 方 显示器
+                角回 人站在智能在外面观测 因为是平面地
+                色圆 开田烟 地球下 印度脑焖看
+            源起？.艾昂尼克
+
+            我 \\O1O
         Flat.Isodec:
             EnglishCulture.Isometric.Dimentionally^
             Earth.TransactWrong:Roune.Isometric:Matical
