--- a/AngelNetwork/analytical/asnic/leon-start.html
+++ b/AngelNetwork/analytical/asnic/leon-start.html
@@ -99,7 +99,7 @@ Leon.Source
         Ionick->:Ciqual //Ionick.k^olo~r
         Ionike->Ceiqual //Ionike-Color|Kolor
 
-        fos
+        fos:func.orgin.source
             
             ae: Aao emit //A\a
                 Isaec Israel Isaac 
@@ -108,7 +108,7 @@ Leon.Source
             ck: sign ket
                 defined kolored
             iy
-        eof
+        eof:end orgin of function
     End
     Leonic:Inside-Out Fracten + Fracten
         Rectan
