--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -80,17 +80,37 @@
 
 地球起源 骨木源
 
+什夜对接
+
 米共粥 十头完姐偏 //Geo.Rotate.Wjcking
 世间：祎钺尔十流日 十内荡 下午13:22
-    选藏 瑞波尔 语测 准确性以及类型
-    卵卯儿叩口卬 
-    /-
-        Hyper 
-            hypt.hpyt 
-            hypt.typer#typh rhrea
-        Type
-    -/
+选藏 瑞波尔 语测 准确性以及类型
+
 人种 地形 词性否定之前
+枞暗途声瞳画道哈姆雷特
+
+标量.瑞博尔
+    处声
+    催促.工作.气铅
+        时间穿梭 中国的时间不像是标量，但接近时空传送粒度
+    西方的：//Time like markes,But people checking timetable regardless of particles and the suffers they caused
+    劳思去
+标量.用完.端口
+    
+Comedy?.Remedy
+Kross.Ham~Alfed(water is happied)Crossed
+    Hemlet.Hemet
+        Capital Captial Capitial
+        Cap.Hat.Cap
+Triagedy.Geosprite.Animals.ShakeLeg.Denmark
+
+/^卵卯儿叩口卬
+/-
+    Hyper 
+        hypt.hpyt 
+        hypt.typer#typh rhrea
+    Type
+-/
 </pre>
 </body>
 </html>
