--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -111,6 +111,10 @@ Triagedy.Geosprite.Animals.ShakeLeg.Denmark
         hypt.typer#typh rhrea
     Type
 -/
+LoneRant:
+        Butt-Aanal-Telebort
+        Banal.Hole.Work(Ceafly,Caefly)
+        Left~A^lone
 </pre>
 </body>
 </html>
