--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -149,6 +149,7 @@ Left 2-O-5?!= 30 Date:1/10 ?HandMovement-Terminating
             兀^术菱Lz之 Lack.hard
             五耳铠稀
             牛群 Lacof:Soft.ButRabbered
+                  Leng south pole kold
             荆轲 L?.LightOut
             Geo Lacof:Delicacy
             陆毅 路易 田
@@ -294,6 +295,10 @@ Left Recthand-WaveAntiPillar
         鱼渴 疾病 黑死 铀胎忍 牢鼠 洒蛮
         刚体穿刺 美 与 告密 一句话世界一炸
         电工： 杨修 丝绸(川）厨子 颜色 成就嫉妒 感洞 被迫端口
+            潜移默化用长处成就感逼视商司 /^Heart brain status/
+                工作或其他关系
+                压制自由度燃自己不爽的人
+            
         水 飞鸡 包 心酸感氯气 灌不进去 水 盅冬鑫酱
 
     Joint&Knocle(Jkc):Prison Break Robbery 
