--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -82,7 +82,7 @@ Kratic Cryteck
         The law:how to USE it to the maximum 
 Transplant
     注入液体 星际跟踪
-人肉搜索加密
+    人肉搜索加密
 
 Telephoniz
     间歇性电话骚扰 中国 身份证 换号码烦 Period Snic is what
@@ -94,6 +94,7 @@ Panic&Threat
     DIgdug panic rate threat
 柯纳米方式/^Konami /
     俄罗斯方块 关口 
+Lonetype
     </pre>
 </body>
 </html>
