--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -80,7 +80,7 @@
 
 地球起源 骨木源
 
-什夜对接
+*什夜对接
 
 米共粥 十头完姐偏 //Geo.Rotate.Wjcking
 世间：祎钺尔十流日 十内荡 下午13:22
@@ -115,6 +115,10 @@ LoneRant:
         Butt-Aanal-Telebort
         Banal.Hole.Work(Ceafly,Caefly)
         Left~A^lone
+
+洒电水.昆汀 睏
+    维赛德.荷鲁斯.法老 恭听内斗
+    巴西 正方形 娲心 底下 穿怂
 </pre>
 </body>
 </html>
