--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -123,6 +123,27 @@
     吴双超：兀双城
     为了所爱的人 Au nom de tous les miens (1985)
 
+    HandMovment,Timespan and Ayonic    
+        Sex impluse being controlled,shade the girls being harassmented doing those they did NOT like
+        Tiny active impluse  behavior just for a PHYSICAL pleasure,especially underbody, will be doomed for all.
+        Water true false, Purity and Renliy time being 
+        The difference of Being harassment,Making love, Hand movment, Vesayna
+
+        Renliy specimen:
+        Gman?.Virgin.Moive.RomanSexMachine
+        Kolor dirt pusa
+        Rhrea might be an example: Kind, being did with variety of  people, without any tiny physical,active body contact
+
+        Battle Sex Jealous
+            Source.Renliy.TinyDiscomfort?.Start.Tribe.Exchange
+            Joint.MetricWhom
+            Gaps
+
+            Water.Boolean?.Utilizing.Revenz.Bloom //revenez.html
+    End
+
+    茶壶 花括号 钍觉鱼/-{(چۋېروڭۇ)}-/
+ 
 </pre>
 </body>
 </html>
