--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -203,7 +203,7 @@ Left 2  23：08 SleepNot
                     穿越 铁 水泥 人类使用工具 电子 关键词.立即复原一模一样 不打忘
             软 硬 
 
-        *向心力移动
+        *向什力移动
             多个声明 生命体
             洛克梅根 启示，脑控，合作人类 共同办事
             三角形坚固 但是 人心不稳定赵阳完蛋 形态不知元素可能忽略或其他/^Leon.Different->Human~/            
@@ -218,7 +218,7 @@ Left 2  23：08 SleepNot
         *艾塞克斯 伊莱克斯 /~Standout.LeonQuota~/
             人类角度：一眨眼功夫 300年过去 微粒子罗塞塔
             颜色？解决平淡无奇(最底层？） 到奇趣 平坦 
-            概念：无生命体不孤独 动态城池/^Not Standout Style/            
+            概念：无生命体不孤独 动态里昂/^Not Standout Style/            
             多少标量以后 人 不存在 或不疼维金美标准
             维金/~Declare.Wjcking~/
                 颜色： 动态定义 
@@ -230,7 +230,7 @@ Left 2  23：08 SleepNot
         地球史前文明消失和外界星球联系与复苏：
             维金变形记
             老掌沟奇遇记
-            超自然生命体现象引导解释-定位到高等文明所在区域 // Persvision
+            超自然生命体现象引导-定位到高等文明所在区域 // Persvision
                 海平面浮出消失的大陆
                 地外星球关联
             丁丁历险记 地心 
