Aero-tine Outline
Windows Toobar Normal control fast
Dock task bar shapeable
Draw interface

--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -123,7 +123,7 @@
     吴双超：兀双城
     为了所爱的人 Au nom de tous les miens (1985)
 
-    HandMovment,Timespan and Ayonic    
+    HandMovment,Timespan and Ayonic.Revelate
         Sex impluse being controlled,shade the girls being harassmented doing those they did NOT like
         Tiny active impluse  behavior just for a PHYSICAL pleasure,especially underbody, will be doomed for all.
         Water true false, Purity and Renliy time being 
@@ -135,7 +135,12 @@
         Rhrea might be an example: Kind, being did with variety of  people, without any tiny physical,active body contact
 
         Battle Sex Jealous
-            Source.Renliy.TinyDiscomfort?.Start.Tribe.Exchange
+            Source.Renliy.TinyDiscomfort?.Start.Tribe-AOR-Herb.Exchange
+                Solid.HardWare:Wood,Stone,Steel,Bronze,Silver,Gold
+                    Arosen:Alfed.Anglar
+                Soft.Animals:Painful Slaughtered then rotate became human
+                    Deal:Let animal in port-al balance^ly, instead of pain
+                    Waterize:Feed Drink Wait Autill
             Joint.MetricWhom
             Gaps
 
