--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -95,7 +95,17 @@ Panic&Threat
 柯纳米方式/^Konami /
     俄罗斯方块 关口 
 Lonetype
-
+    
+Hatred Fury Anaytical:?Cos->Stone:
+    Hurt Hate Rewound 
+    Apparently^Ja-gust their opponents
+        Sthick-Think about the person around 
+        Underground.Get.What?
+    Then their opponents will be received
+        Opponent.Status-AORN-Level:
+           Status : Funny,Hurt,Whatever(self-notice)
+           Level:Coregat - Line:26s
+        Keywordiz:Mood
     </pre>
 </body>
 </html>
