--- a/AngelNetwork/analytical/advent.html
+++ b/AngelNetwork/analytical/advent.html
@@ -285,6 +285,8 @@ Covid:Computer Laptop Celly
 
 Aisock
     Flat.DisplayScreen.3d.Gaps.Analytical.Metric.Meticals
+Webster
+    单条 与 三角 //Advertisaiz
 </pre>
     <script type="text/javascript">
         var p = $("#editor").html();
