--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -40,7 +40,9 @@
 　　    男女男 女女男 男男女女男
 　　    儿子 女儿 情人 敌人 领导 老公 丈夫 爱人 
 　　    Lz:金星~喂奶驷
-
+    
+    男性 群体事件 疏远 女性 Isolation
+        阿尔弗莱德 SexImpulse
     Lz:  Kaetseof? P.Govern&R&M霓虹婷-王岐山
     Chronosphere
     VθS SnicTime TimeSnical when?snic 时空（之-日-z）缘
