--- a/AngelNetwork/analytical/advent.html
+++ b/AngelNetwork/analytical/advent.html
@@ -237,34 +237,40 @@ Nint
             放大或缩小Excel表格 占用了多少
             Line:57X:Anuser.FrequentUsedSoftware&Screen&Pixel
 
-Sumit.Lonic
-        Analytical.Helpful
-        Slowly
-        Renily.Kontrol.Computer.Simulate->Water->Renliy->Sumit
-        Necessities of BORDER for leonic.simit
+Camery.Komet
+1	1	1	1	1	1	B
+1					/	C
+1		*	*	*		1
+1 --	*	X	*	-- 1
+1		*	*	*		1
+1	/					1
+1	1	1	1	1	1	1
+Kamie:Kamey.Sumit.Lonic
+        Asniyic(Aute(Handle)Nint-Center-Nnit(Handle)Aute)Camery
+        Senter.WaterBeautify
+            Renily.Kontrol.Computer.Simulate->Water->Renliy->Sumit
+        Zenter.Particle.Ionic
+            Computer.Draw:Slowly                
+
+        Solid~Shape:
             Hidden when required
-            1	1	1	1	1	1	B
-            1					/	C
-            1		*	*	*		1
-            1 --	*	X	*	-- 1
-            1		*	*	*		1
-            1	/					1
-            1	1	1	1	1	1	1
-        Recfine:Ask:
-            Source
-            Origin
+            Inside~Outside
+            Outside-Goine^Yin
+            Borderine.dota
+                Necessities of BORDER for leonic.simit
+            Outside.Aerodefine.Kolors.Hidden
+        *Handle.Touched     
+
         Start from a pixel
-            LeoniKout
- 
-        自身Rotate
-        齿儿把手 放 公式
-        标杆 词性 3SC Stickstackstabledcolored
-        容3 边角分
-        隙缝 3.14
-        PineEach
-        Axis.angle
-        Axis.center.inside&outside:border&kolor
-End
+
+        Caelful.Rotate.Self
+        Auto.Rolelat.Aute
+         //  齿儿把手 放 公式
+         //  标杆 词性 动 不 名 形 //Tsc:Three-SC
+         //      容三 边 角 心 偏 推 分 
+         //      隙缝 3.14
+            Pine.each.character
+Asniyake.Trace.Rollback
 
 Covid:Computer Laptop Celly    
     communicate:socket wifi
