--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -135,7 +135,7 @@
         Rhrea might be an example: Kind, being did with variety of  people, without any tiny physical,active body contact
 
         Battle Sex Jealous
-            Source.Renliy.TinyDiscomfort?.Start.Tribe-AOR-Herb.Exchange
+            Source.Renliy.TinyDiscomfort?.Start.Tribe-AORN-Herb.Exchange
                 Solid.HardWare:Wood,Stone,Steel,Bronze,Silver,Gold
                     Arosen:Alfed.Anglar
                 Soft.Animals:Painful Slaughtered then rotate became human
