--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -152,6 +152,13 @@
     东方面孔 狄中鑫AunderK-round
     黄头发粗糙皮肤不容易
     烂涩 黄涩 妲柒蹭硬 //Dragged in
+    
+    身先士卒.铀鑫酸干.给予信心 ：关键字：谍报 捷豹 线报 服从与绝对 /^skirmish
+        通风报信        
+        战斗事件”正确“的定义：长官下的命令就是正确的 牵连公式 //Kross:Battle.Most.Geographic.Territory
+                如果有疑心正确的定义酒不同
+        但是留有秘密
+    盟陷魏
 </pre>
 </body>
 </html>
