--- a/Rastera/asnic/analytical/requires.html
+++ b/Rastera/asnic/analytical/requires.html
@@ -25,8 +25,7 @@
 AsnicInterface
     Metro
 	WordPress
-	gridly
-   
+	gridly   
 qml canvas svg	Nisote Nint 九宫格 坐标游戏 frame func metrix
 asc  字符画	
 气味生成装置	
@@ -46,6 +45,9 @@ Remote SquareShow DesktopScreen
 Velocity.js
 多点触控 类似于笔记本Pad 
     选择类似于下拉框AutoComplete
+Astar.Build
+    Vesaid.Fan.Wave
+    盟军敢死队 敌人搜索扇形
 </pre>
     
     <script type="text/javascript">
