myth cutlture -aginst

--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -159,6 +159,32 @@
                 如果有疑心正确的定义酒不同
         但是留有秘密
     盟陷魏
+    半形态 通用字
+    
+    克朗何 Conduction Particle People Kon\trol Whaterize 
+        传导：铀 嘴 下体 周围人  mine.html    
+
+        赵海飞 杨绵绵声音 windows怕欺负
+        邢明伟他妈 C 程序 时间内编出应用题
+        孙振江 Zoo 简单push问
+        底氏->病娲
+        音叉，饮茶 鱼盐插义 Renliy.Discover.Language.Vesaid.MutrualLackes
+
+        牙色忘 补项硕重文 婬捅 //Dumb
+        希腊哲学嘴说 Debate Argument Augment 
+        服饰与凉鞋 Apparel Sandals Ass Basic
+        德国物理创作 Em-Z-Bed    
+    水 不动少 取决于 容器
+        池 坑 溪 河 湖 海 
+        沟 底
+        人 动物 寻找特殊性 Rant Kand
+            猎杀 // MetricH 可怜与指责 仇恨思想与现金干亲人
+            待杀 呆傻 
+            家养 半养 殖 
+        尖嘴猴腮 
+        剑齿虎 猛犸象 特殊突出 牙耳斜
+        
+    流
 </pre>
 </body>
 </html>
