--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -177,7 +177,8 @@ Definition:PointBack.RangeFirst
         4.对听讲人应该是有利
 人内不忘儿氏脑亚，外头打忘，
 直串类型：
-    处男憋气端口：秘密，内斗，疼，冤枉
+    处男憋气端口   处女之芯瑞博尔/@Port/ 
+        秘密，内斗，疼，冤枉
     飞虎队通讯：语言 秘密
 吃饭没味道
     弧牵？：外牵
@@ -193,7 +194,8 @@ Definition:PointBack.RangeFirst
     尤其是不信教的 中国知道佛教 但是西方挤勒 渗透基因
  
 地球空间机械性循环:问
->>>>>>> 14a0861e4b32cf4356cc481c28f144d761c75849
+父亲镜子行为 建术 作为 牵引式 -O- 母亲怀胎太重不容易物理
+工程处家属院李怡兔子： 信息素 传奇色彩 锂子八封 不去投人
   </pre>
 
     </div>
