--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -196,6 +196,7 @@ Definition:PointBack.RangeFirst
 地球空间机械性循环:问
 父亲镜子行为 建术 作为 牵引式 -O- 母亲怀胎太重不容易物理
 工程处家属院李怡兔子： 信息素 传奇色彩 锂子八封 不去投人
+有事找佛 耶稣 ，但不知道到底是什么，有苦就到 文化不知
   </pre>
 
     </div>
