--- a/AngelNetwork/pixcel-array.html
+++ b/AngelNetwork/pixcel-array.html
@@ -35,19 +35,20 @@
     dsk:Cd-disk 
 
 #Summary.Persection:DCT:Advent-O-Anyuser
-            Inner
-                Software.Hardware.Drive
-            Outter                
-                Software.Keyboard.Type
-                Software.Mouse.Click:left,middle,right
-                Hardware.Camera.Software
-            Interface
-                Software.Hardware.Plug.Count
-Pixel
-    EyeVision.Autmost
-    Anaytical.DataCollect
-        dct.dvs.user.celly.inf.usb-type-c 
+    Inner
+        Software.Hardware.Drive
+    Outter                
+        Software.Keyboard.Type
+        Software.Mouse.Click:left,middle,right
+        Hardware.Camera.Software
+    Interface
+        Software.Hardware.Plug.Count
+
+*Autmost(EyeVision&Hand)  Anaytical.DataCollect
+    Depends on which one is piroity to think about
+        user.dct.device.celly..inf.usb-type-c 
         dct.dev.outter.hard.scn.lcd
+
     dct.dev.outter.hard.scn.crt
     dct.dev.outter.hard.mbd.bios
     dct.dev.inner.hard.mbd.inf.pci
@@ -58,8 +59,40 @@ Pixel
     Utility.Renliy.Caerer 
         Business,Industry Automation,
  
+Pixel-Array
+  Isoc:(Pixcel(Each,Func Frame:Astar)Draw)Leonic
+ 
+    Flat.Isoc  
+    Flat.Isonic.Inteface.stick.stack
+    Flat.Isodec.Transtick.Dimention.Darthcount.Ezno.Merge
 
-Watch
+    Requires.Summary.Rant-Oute
+    Requires.Tile.Analysis
+    Requires.Komet.Shape
+        Not just vertical rectangle
+        Tryant Frant Frank         
+   //3.14 amendment 
+    //单个文字字母 比例尺 直接生成实物
+    //颜色启示性 Asydaer
+    Required?.Camrey.Pixcelly^Alpha
+    HouseFrame.Analytical
+    框方：中文字设计 多触点设计 语言文字CAD
+
+    英文三字码
+        墙墙墙墙墙门墙墙墙墙墙墙墙墙墙墙墙墙墙墙墙墙     
+        墙                                                   墙
+        窗厨厨
+        窗房房                                              墙         
+        窗  桌子                                            墙
+        墙墙墙墙墙墙墙墙门门墙墙墙墙墙墙墙墙墙墙墙墙     
+        墙           墙
+        窗   床床
+        墙柜床床柜
+        墙墙墙墙墙墙墙墙门墙墙
+                        墙盆     墙
+                        墙浴  池墙
+                        墙墙墙墙墙
+    结束
 </pre>
 </body>
 </html>
