--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -50,13 +50,27 @@
     梦~仙维?->铀力器?=2次:煺 踹 磴 舞力器 条燥 Flea 
     Finger 分割 掌管聋附芹  辛浆 5脍牵
 
-    成就感：三角族 巴西方 希腊圆   转置
+    起源：惩酒感：三角族 巴西方 希腊圆 
+            起源文明：
+        巴西方
             色 文明三 Aztec.Maya.Inka 族球旗：磁欧石倾倒   
-    埃及阴包
+        希腊圆                
+            关键字：自由度 变脏 人迁移 水/correget/ 胆印度脏朝圣 flow dirt w~hateR~level
+            有了水可以维系生命 水脏了生命危险
+            水池 自由个体  电影：异教徒 Neigayed wicker green bug  
+                兀欧打硼 /~Pilaeodub,K^onLumniz RectStandub Hedged
+                向心力的偏移
+                巨石阵 希腊中心祭奠
+            河流 一对堆人 衍生
+            小溪 一撮人
+        跳舞 荡臊~/ING/ 宫廷 昆汀 西放.络踢 祎商 內恋.动房
+    埃及阴包 四面进自塔
      包?例子:金砖
     女娲族
         结绳记忆
     冬/噩els/耗：Soldier.Captured.Uniform.ForcedWeared
+  源起.转置
+
 Left5: 1/8
     电工花括号大茶壶：利用创造人才的优势以及相关物理攻击本人 可能要了人命
     Ionic Lang Rant Back
