--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -72,6 +72,7 @@
     国际通知 NationalTranspeaker
     Binladen
     ConcreteBox Propoganda
+       location.anaytical.national.border.military.alarm
 Kratic Cryteck
     Explais.Group
     when snic   time 骨脾Skinin
