fish how much left

--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -208,6 +208,11 @@
         苏联二战：爆炸 炮弹
         罗马：无产阶级斗争 马刻丝
     源起
+
+    人 // Anti -O- Stick
+    Time Execute BeHead Heart Hurt
+    巴西方
+        阴佳 潮/Conduct/南方
 </pre>
 </body>
 </html>
