--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -51,7 +51,10 @@
     Finger 分割 掌管聋附芹  辛浆 5脍牵
 
     起源：惩酒感：三角族 巴西方 希腊圆 
-            起源文明：
+        三角族
+            东方氏族 华夏 有巢 燧人
+            串帝辛
+            印第安/~Tryant->Frant->Reck~Lonk^Age->hurt 娲心 压忑澜敌撕 稳冥     
         巴西方
             色 文明三 Aztec.Maya.Inka 族球旗：磁欧石倾倒   
         希腊圆                
